Fix layout shifting when changing sort column for properties with longer names than all property values

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -63,3 +63,7 @@ body {
 .display-none {
     display: none !important;
 }
+
+.visibility-hidden {
+    visibility: hidden !important;
+}
